manifests/infra/kuma/MutatingWebhookConfiguration-kuma-admission-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: kuma-control-plane
    app.kubernetes.io/instance: kuma
    app.kubernetes.io/name: kuma
  name: kuma-admission-mutating-webhook-configuration
  namespace: kuma-system
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lRSGdwOEs3MTBaQW5JZ2tuaDBDeVMwakFOQmdrcWhraUc5dzBCQVFzRkFEQVMKTVJBd0RnWURWUVFERXdkcmRXMWhMV05oTUI0WERUSTFNRFl3TnpBMk5UVXlNVm9YRFRNMU1EWXdOVEEyTlRVeQpNVm93RWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU54NlZmVHJLc2R1YlkzRjRUSlhiVW1EK05MZzl1MmJZdzdubkE1UUtYVlovNmc1TGg2WDhhY3kKK040Qm5sTVRHRTBUa2lKUWRYRWdzbTluQi9HYTRtVTdsTnVDOG44clc3elFML3RXL3RydHJEaTlCNDVlaE9CdwptRFA2SERIQUdq [...]
      service:
        name: kuma-control-plane
        namespace: kuma-system
        path: /default-kuma-io-v1alpha1-mesh
    failurePolicy: Fail
    name: mesh.defaulter.kuma-admission.kuma.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - meshes
          - dataplanes
          - dataplaneinsights
          - meshgateways
          - zoneingresses
          - zoneingressinsights
          - zoneegresses
          - zoneegressinsights
          - serviceinsights
          - zone
          - zoneinsights
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshpassthroughs
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtlses
          - meshtraces
          - meshtrafficpermissions
          - hostnamegenerators
          - meshexternalservices
          - meshmultizoneservices
          - meshservices
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lRSGdwOEs3MTBaQW5JZ2tuaDBDeVMwakFOQmdrcWhraUc5dzBCQVFzRkFEQVMKTVJBd0RnWURWUVFERXdkcmRXMWhMV05oTUI0WERUSTFNRFl3TnpBMk5UVXlNVm9YRFRNMU1EWXdOVEEyTlRVeQpNVm93RWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU54NlZmVHJLc2R1YlkzRjRUSlhiVW1EK05MZzl1MmJZdzdubkE1UUtYVlovNmc1TGg2WDhhY3kKK040Qm5sTVRHRTBUa2lKUWRYRWdzbTluQi9HYTRtVTdsTnVDOG44clc3elFML3RXL3RydHJEaTlCNDVlaE9CdwptRFA2SERIQUdq [...]
      service:
        name: kuma-control-plane
        namespace: kuma-system
        path: /owner-reference-kuma-io-v1alpha1
    failurePolicy: Fail
    name: owner-reference.kuma-admission.kuma.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
    rules:
      - apiGroups:
          - kuma.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
        resources:
          - circuitbreakers
          - externalservices
          - faultinjections
          - healthchecks
          - meshgateways
          - meshgatewayroutes
          - proxytemplates
          - ratelimits
          - retries
          - timeouts
          - trafficlogs
          - trafficpermissions
          - trafficroutes
          - traffictraces
          - virtualoutbounds
          - meshaccesslogs
          - meshcircuitbreakers
          - meshfaultinjections
          - meshhealthchecks
          - meshhttproutes
          - meshloadbalancingstrategies
          - meshmetrics
          - meshpassthroughs
          - meshproxypatches
          - meshratelimits
          - meshretries
          - meshtcproutes
          - meshtimeouts
          - meshtlses
          - meshtraces
          - meshtrafficpermissions
          - hostnamegenerators
          - meshexternalservices
          - meshmultizoneservices
          - meshservices
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lRSGdwOEs3MTBaQW5JZ2tuaDBDeVMwakFOQmdrcWhraUc5dzBCQVFzRkFEQVMKTVJBd0RnWURWUVFERXdkcmRXMWhMV05oTUI0WERUSTFNRFl3TnpBMk5UVXlNVm9YRFRNMU1EWXdOVEEyTlRVeQpNVm93RWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU54NlZmVHJLc2R1YlkzRjRUSlhiVW1EK05MZzl1MmJZdzdubkE1UUtYVlovNmc1TGg2WDhhY3kKK040Qm5sTVRHRTBUa2lKUWRYRWdzbTluQi9HYTRtVTdsTnVDOG44clc3elFML3RXL3RydHJEaTlCNDVlaE9CdwptRFA2SERIQUdq [...]
      service:
        name: kuma-control-plane
        namespace: kuma-system
        path: /inject-sidecar
    failurePolicy: Fail
    name: namespace-kuma-injector.kuma.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
        - key: kuma.io/sidecar-injection
          operator: In
          values:
            - enabled
            - "true"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREekNDQWZlZ0F3SUJBZ0lRSGdwOEs3MTBaQW5JZ2tuaDBDeVMwakFOQmdrcWhraUc5dzBCQVFzRkFEQVMKTVJBd0RnWURWUVFERXdkcmRXMWhMV05oTUI0WERUSTFNRFl3TnpBMk5UVXlNVm9YRFRNMU1EWXdOVEEyTlRVeQpNVm93RWpFUU1BNEdBMVVFQXhNSGEzVnRZUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU54NlZmVHJLc2R1YlkzRjRUSlhiVW1EK05MZzl1MmJZdzdubkE1UUtYVlovNmc1TGg2WDhhY3kKK040Qm5sTVRHRTBUa2lKUWRYRWdzbTluQi9HYTRtVTdsTnVDOG44clc3elFML3RXL3RydHJEaTlCNDVlaE9CdwptRFA2SERIQUdq [...]
      service:
        name: kuma-control-plane
        namespace: kuma-system
        path: /inject-sidecar
    failurePolicy: Fail
    name: pods-kuma-injector.kuma.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
    objectSelector:
      matchLabels:
        kuma.io/sidecar-injection: enabled
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
